// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders a table with actions 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th
          class="custom-table-column"
          scope="col"
        >
          name
        </th>
        <th
          class="table-action-column"
          scope="col"
        >
          <span
            class="sr-only"
          >
            Actions
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      class="table-body"
    >
      <tr>
        <td
          class="table-cell"
        >
          Test App
        </td>
        <td
          class="table-action-cell"
        >
          <svg
            class="2-5 h-5 fill-white"
            fill="none"
            role="content-copy-icon"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.7497 0.833374H3.74967C2.83301 0.833374 2.08301 1.58337 2.08301 2.50004V14.1667H3.74967V2.50004H13.7497V0.833374ZM16.2497 4.16671H7.08301C6.16634 4.16671 5.41634 4.91671 5.41634 5.83337V17.5C5.41634 18.4167 6.16634 19.1667 7.08301 19.1667H16.2497C17.1663 19.1667 17.9163 18.4167 17.9163 17.5V5.83337C17.9163 4.91671 17.1663 4.16671 16.2497 4.16671ZM16.2497 17.5H7.08301V5.83337H16.2497V17.5Z"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td
          class="table-cell"
        >
          Fleet Management App
        </td>
        <td
          class="table-action-cell"
        >
          <svg
            class="2-5 h-5 fill-white"
            fill="none"
            role="content-copy-icon"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.7497 0.833374H3.74967C2.83301 0.833374 2.08301 1.58337 2.08301 2.50004V14.1667H3.74967V2.50004H13.7497V0.833374ZM16.2497 4.16671H7.08301C6.16634 4.16671 5.41634 4.91671 5.41634 5.83337V17.5C5.41634 18.4167 6.16634 19.1667 7.08301 19.1667H16.2497C17.1663 19.1667 17.9163 18.4167 17.9163 17.5V5.83337C17.9163 4.91671 17.1663 4.16671 16.2497 4.16671ZM16.2497 17.5H7.08301V5.83337H16.2497V17.5Z"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td
          class="table-cell"
        >
          Data Analytics
        </td>
        <td
          class="table-action-cell"
        >
          <svg
            class="2-5 h-5 fill-white"
            fill="none"
            role="content-copy-icon"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.7497 0.833374H3.74967C2.83301 0.833374 2.08301 1.58337 2.08301 2.50004V14.1667H3.74967V2.50004H13.7497V0.833374ZM16.2497 4.16671H7.08301C6.16634 4.16671 5.41634 4.91671 5.41634 5.83337V17.5C5.41634 18.4167 6.16634 19.1667 7.08301 19.1667H16.2497C17.1663 19.1667 17.9163 18.4167 17.9163 17.5V5.83337C17.9163 4.91671 17.1663 4.16671 16.2497 4.16671ZM16.2497 17.5H7.08301V5.83337H16.2497V17.5Z"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td
          class="table-cell"
        >
          Hello World
        </td>
        <td
          class="table-action-cell"
        >
          <svg
            class="2-5 h-5 fill-white"
            fill="none"
            role="content-copy-icon"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.7497 0.833374H3.74967C2.83301 0.833374 2.08301 1.58337 2.08301 2.50004V14.1667H3.74967V2.50004H13.7497V0.833374ZM16.2497 4.16671H7.08301C6.16634 4.16671 5.41634 4.91671 5.41634 5.83337V17.5C5.41634 18.4167 6.16634 19.1667 7.08301 19.1667H16.2497C17.1663 19.1667 17.9163 18.4167 17.9163 17.5V5.83337C17.9163 4.91671 17.1663 4.16671 16.2497 4.16671ZM16.2497 17.5H7.08301V5.83337H16.2497V17.5Z"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td
          class="table-cell"
        >
          Hello World
        </td>
        <td
          class="table-action-cell"
        >
          <svg
            class="2-5 h-5 fill-white"
            fill="none"
            role="content-copy-icon"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.7497 0.833374H3.74967C2.83301 0.833374 2.08301 1.58337 2.08301 2.50004V14.1667H3.74967V2.50004H13.7497V0.833374ZM16.2497 4.16671H7.08301C6.16634 4.16671 5.41634 4.91671 5.41634 5.83337V17.5C5.41634 18.4167 6.16634 19.1667 7.08301 19.1667H16.2497C17.1663 19.1667 17.9163 18.4167 17.9163 17.5V5.83337C17.9163 4.91671 17.1663 4.16671 16.2497 4.16671ZM16.2497 17.5H7.08301V5.83337H16.2497V17.5Z"
            />
          </svg>
        </td>
      </tr>
      <tr>
        <td
          class="table-cell"
        >
          Hello World
        </td>
        <td
          class="table-action-cell"
        >
          <svg
            class="2-5 h-5 fill-white"
            fill="none"
            role="content-copy-icon"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.7497 0.833374H3.74967C2.83301 0.833374 2.08301 1.58337 2.08301 2.50004V14.1667H3.74967V2.50004H13.7497V0.833374ZM16.2497 4.16671H7.08301C6.16634 4.16671 5.41634 4.91671 5.41634 5.83337V17.5C5.41634 18.4167 6.16634 19.1667 7.08301 19.1667H16.2497C17.1663 19.1667 17.9163 18.4167 17.9163 17.5V5.83337C17.9163 4.91671 17.1663 4.16671 16.2497 4.16671ZM16.2497 17.5H7.08301V5.83337H16.2497V17.5Z"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table renders a table with custom render 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th
          class="custom-table-column"
          scope="col"
        >
          name
        </th>
        <th
          class="custom-table-column"
          scope="col"
        >
          names
        </th>
      </tr>
    </thead>
    <tbody
      class="table-body"
    >
      <tr>
        <td
          class="table-cell"
        >
          <p>
            Test App
             - 
            sandbox
          </p>
        </td>
        <td
          class="table-cell"
        />
      </tr>
      <tr>
        <td
          class="table-cell"
        >
          <p>
            Fleet Management App
             - 
            production
          </p>
        </td>
        <td
          class="table-cell"
        />
      </tr>
      <tr>
        <td
          class="table-cell"
        >
          <p>
            Data Analytics
             - 
            production
          </p>
        </td>
        <td
          class="table-cell"
        />
      </tr>
      <tr>
        <td
          class="table-cell"
        >
          <p>
            Hello World
             - 
            production
          </p>
        </td>
        <td
          class="table-cell"
        />
      </tr>
      <tr>
        <td
          class="table-cell"
        >
          <p>
            Hello World
             - 
            production
          </p>
        </td>
        <td
          class="table-cell"
        />
      </tr>
      <tr>
        <td
          class="table-cell"
        >
          <p>
            Hello World
             - 
            production
          </p>
        </td>
        <td
          class="table-cell"
        />
      </tr>
    </tbody>
  </table>
</div>
`;
